--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.5.4"
-  }
+    "graphql": "^14.5.4",
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {}
 }
