--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jessica Paczuski",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.4",
